Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29000

cdb remote debug cannot get variable's view (locals expressions...) because python dumper

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 11.0.0
    • Qt Creator 10.0.0
    • Debugger
    • None
    • Local and remote PC: win10 64bit;
      qt5.12.12 msvc2017 32bit
    • de546ff3e (master), 28d1d3ffe (master)

      Cdb remote debug issue:

      After you install Windows Debugging Tools and setup Qt Creator CDB extension in remote PC, you can debug, but:

      When use Python dumper (default option), you need to install a qtcreator on the remote PC, and with the same install path as the local PC. If you don't do this, you can't get variable's value view (Locals, Expressions...).

        For Gerrit Dashboard: QTCREATORBUG-29000
        # Subject Branch Project Status CR V

            davschul David Schulz
            charlesliao 成 廖
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes