src/plugins/debugger/cdb/cdbengine.cpp
@@ -2766,7 +2766,7 @@ void CdbEngine::setupScripting(const DebuggerResponse &response)
         return;
     }
 
-    QString dumperPath = runParameters().dumperPath.toUserOutput();
+    QString dumperPath = Core::ICore::resourcePath("debugger").toUserOutput();
     dumperPath.replace('\\', "\\\\");
     runCommand({"sys.path.insert(1, '" + dumperPath + "')", ScriptCommand});
     runCommand({"from cdbbridge import Dumper", ScriptCommand});
