src/plugins/debugger/debuggerengine.h
@@ -184,7 +184,6 @@ public:
 
     QStringList validationErrors;
 
-    Utils::FilePath dumperPath;
     int fallbackQtVersion = 0x50200;
 
     // Common debugger constants.
